<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg"
    tools:context=".StatsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:onClick="goBack"
                android:id="@+id/back"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"/>

            <TextView
                android:id="@+id/live_stats_textview"
                android:layout_centerHorizontal="true"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_below="@id/back"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="36sp"
                android:fontFamily="@font/montserrat_extrabold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_stats_hindi" />

            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/stats_subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:text="@string/gets_updated_every_day_hindi"
                android:fontFamily="@font/open_sans_regular"
                android:layout_below="@id/live_stats_textview"/>

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_below="@id/stats_subtext"
                android:layout_marginTop="40dp"
                android:text="2.8M"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat_extrabold"
                android:id="@+id/recovered_no_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/recovered_cases_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered_hindi"
                android:textAllCaps="true"
                android:fontFamily="@font/open_sans_regular"
                android:layout_below="@id/death_no_text"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/total_no_text"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:text="2.8M"
                android:textAlignment="center"
                android:layout_toStartOf="@id/recovered_no_text"
                android:layout_alignTop="@id/recovered_no_text"
                android:layout_alignParentStart="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat_extrabold"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_hindi"
                android:id="@+id/total_cases_text"
                android:textAllCaps="true"
                android:fontFamily="@font/open_sans_regular"
                android:layout_below="@id/total_no_text"
                android:layout_alignStart="@id/total_no_text"
                android:layout_alignEnd="@id/total_no_text"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginStart="24dp"
                android:id="@+id/death_no_text"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/recovered_no_text"
                android:text="2.8M"
                android:textAlignment="center"
                android:gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/recovered_no_text"
                android:fontFamily="@font/montserrat_extrabold"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/death_cases_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/death_hindi"
                android:textAllCaps="true"
                android:fontFamily="@font/open_sans_regular"
                android:layout_below="@id/death_no_text"
                android:layout_alignStart="@id/death_no_text"
                android:layout_alignEnd="@id/death_no_text"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="40dp"
                android:id="@+id/stats_recyclerview"
                tools:listitem="@layout/stats_item_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/recovered_cases_text"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressbar"
                android:visibility="visible"
                app:indicatorColor="@color/purple_500"
                android:indeterminate="true"
                android:layout_below="@id/recovered_cases_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>